--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 aniso8601==7.0.0
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
 Django==4.0.5
 django-cors-headers==3.13.0
 django-filter==21.1
@@ -8,7 +7,9 @@ djangorestframework==3.12.4
 promise==2.3
 pytz==2022.1
 Rx==1.6.1
+safety==1.10.3
 singledispatch==3.7.0
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
+gunicorn==20.1.0
