--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ server {
     client_max_body_size 50M;
 
     location / {
+        add_header 'Access-Control-Allow-Origin' '*';
         proxy_pass http://fennel_api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
