Adjustments to nginx.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
 
-  dev:
+  api-dev:
     build:
       context: .
       dockerfile: Dockerfile
