--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         uses: google-github-actions/auth@v0
         with:
           token_format: access_token
-          workload_identity_provider: whiteflag-provider
+          workload_identity_provider: projects/266537174077/locations/global/workloadIdentityPools/whiteflag-pool/providers/whiteflag-provider
           service_account: docker-devops@whiteflag-0.iam.gserviceaccount.com
           access_token_lifetime: 300s
      
@@ -49,6 +49,6 @@ jobs:
         with:
           push: true
           tags: |
-             us-east1-docker.pkg.dev/whiteflag-0/fennel-api/fennel-cli:latest
+             us-east1-docker.pkg.dev/whiteflag-0/fennel-api/fennel-api:latest
             #us-east1-docker.pkg.dev/whiteflag-0/<your-gar-repo-name>/fennel-cli:${{ steps.get-tag.outputs.short_ref }}
           
