--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.12.4
 promise==2.3
 pytz==2022.1
 Rx==1.6.1
+psycopg2-binary==2.9.2
 safety==1.10.3
 singledispatch==3.7.0
 six==1.16.0
