This should prevent double-builds.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,12 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
 
+      - name: Build Docker Image
+        env:
+          IMAGE_NAME: fennel-api #create env called IMAGE_NAME consisted of actual name of Docker Image after we build
+          PROJECT_ID: whiteflag-0
+        run: docker build -t  us-east1-docker.pkg.dev/whiteflag-0/fennel-docker-registry/$IMAGE_NAME:latest . #build the docker image
+
       - id: auth
         name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v0
@@ -25,12 +31,6 @@ jobs:
           workload_identity_provider: projects/266537174077/locations/global/workloadIdentityPools/whiteflag-pool/providers/whiteflag-provider
           service_account: docker-devops@whiteflag-0.iam.gserviceaccount.com
           access_token_lifetime: 300s
-     
-      - name: Build Docker Image
-        env:
-          IMAGE_NAME: fennel-api #create env called IMAGE_NAME consisted of actual name of Docker Image after we build
-          PROJECT_ID: whiteflag-0
-        run: docker build -t $IMAGE_NAME:latest . #build the docker image
 
       - name: Login to Artifact Registry
         uses: docker/login-action@v1
@@ -43,12 +43,7 @@ jobs:
         id: get-tag
         run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
 
-      - id: docker-push-tagged
-        name: Tag Docker image and push to Google Artifact Registry
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-             us-east1-docker.pkg.dev/whiteflag-0/fennel-docker-registry/fennel-api:latest
-            #us-east1-docker.pkg.dev/whiteflag-0/<your-gar-repo-name>/fennel-cli:${{ steps.get-tag.outputs.short_ref }}
+      - name: 'Docker push'
+        run: |-
+          docker push us-east1-docker.pkg.dev/whiteflag-0/fennel-docker-registry/polkadot-protocol:latest
           
